--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
-before_install: 'git submodule update --init'
-script: 'ruby -r bundler/setup -S rake test'
+language: ruby
 
 rvm:
   - 1.9.3
@@ -7,3 +6,9 @@ rvm:
   - ruby
   - rbx-2
   - jruby
+
+sudo: false
+
+before_install: 'git submodule update --init'
+
+script: 'ruby -r bundler/setup -S rake test'
