--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ rvm:
   - 2.1
   - 2.2
   - rbx-2
-  - jruby
+  - jruby-9.0.0.0
 
 install: 'bundle install --retry=3'
 script: 'ruby -r bundler/setup -S rake test'
