--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ test:
   before_script:
     - bundle install
   script:
-    - ruby -vS rake test
+    - rake test
   artifacts:
     paths:
       - .
