--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,10 @@
 image: ruby:2.3
 
-before_script:
-  - pwd
-  - ruby -v
-  - which ruby
+info:
+  script:
+    - pwd
+    - ruby -v
+    - which ruby
 
 stages:
   - test
