--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,22 +14,24 @@ stages:
   - gem:build
   - gem:release
 
-info:
-  stage: prepare
-  script:
-    - uname -a
-    - whoami
-    - pwd
-    - ruby -v
-    - which ruby
-    - ls -al
-
 prepare:
   stage: prepare
   script:
     - gem install bundler --no-ri --no-rdoc
     - bundle install --retry=3 --path vendor
     - ls vendor
+
+info:
+  stage: test
+  script:
+    - uname -a
+    - whoami
+    - pwd
+    - ruby -v
+    - which ruby
+    - gem env
+    - gem list
+    - ls -al
 
 test:
   stage: test
