--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - rvm reload
   - rvm use --install $TRAVIS_RUBY_VERSION --binary --latest
 install: 'gem install bundler; bundle install --retry=3'
-script: 'ruby -vr bundler/setup -S rake test'
+script: 'ruby -r bundler/setup -S rake test'
 
 matrix:
   include:
