--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ matrix:
       env: RUBYOPT=--enable-frozen-string-literal
     - rvm: 2.5
       env: RUBYOPT=--enable-frozen-string-literal
+    - rvm: 2.6
+      env: RUBYOPT=--enable-frozen-string-literal
     - rvm: ruby-head
       env: RUBYOPT=--enable-frozen-string-literal
     - rvm: jruby
